--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,6 +431,9 @@ div.full-width{
   .contact-form{
     margin-left: -2.2rem;
   }
+  .input-msg{
+    max-width: 34rem;
+  }
 }
 .text-white-bg{
   color: var(--text-color-whitebg);
